--- a/main.css
+++ b/main.css
@@ -104,14 +104,9 @@ body {
 #list li {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     height: 5vh;
-    padding-left: 10px;
-}
-.btnElementLi {
-    border: 1px dashed orangered;
-}
-.textNodeClass{
-    border: 1px solid red;
+    padding:0 10px;
 }
 
 #list li:nth-child(even) {
@@ -140,8 +135,6 @@ body {
     text-decoration: line-through;
     text-decoration-color: red;
 }
-
-
 
 
 /*popup*/
