--- a/main.css
+++ b/main.css
@@ -105,7 +105,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 5vh;
+    min-height: 5vh;
     padding: 0 10px;
 }
 
