--- a/main.css
+++ b/main.css
@@ -199,6 +199,17 @@ li .btnElementLi #newBtnMark {
     font-size: 16px;
 }
 
+.modal-content .close {
+    position: absolute;
+    left: 110%;
+    top: -15%;
+    color: black;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+
+
 
 @media screen and (min-width: 768px) {
     #myModal {
