--- a/style/main.css
+++ b/style/main.css
@@ -128,15 +128,18 @@ li .btnElementLi button {
 }
 
 li .btnElementLi #newBtnDelete {
-    width: 46px;
+    /*width: 46px;*/
+    width: auto;
 }
 
 li .btnElementLi #newBtnEdit {
-    width: 35px;
+    /*width: 35px;*/
+    width: auto;
 }
 
 li .btnElementLi #newBtnMark {
-    width: 88px;
+    /*width: 88px;*/
+    width: auto;
 }
 
 #list li:nth-child(even) {
